// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All hotels query cityName should return cityName 1`] = `
Object {
  "data": Object {
    "allAvailableHotels": Object {
      "cityName": "Abcoude",
    },
  },
}
`;

exports[`All hotels query cityName should throw an error if you query without latitude and longitude 1`] = `
Object {
  "data": Object {
    "allAvailableHotels": Object {
      "cityName": null,
    },
  },
  "errors": Array [
    [GraphQLError: Cannot query cityName without latitude longitude.],
  ],
}
`;
